# sinkgd-pytorch

./: README.md  pyproject.toml
src/sinkgd_optimizer/: __init__.py  optimizer.py
