[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sinkgd-torch"
version = "0.1.0"
authors = [
	{ name = "Dan (Woin) Lee", email = "naubull2@gmail.com" }
]
description = "A PyTorch implementation of the SinkGD optimizer for memory-efficient LLM training."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.10",
]

[project.urls]
Homepage = "https://github.com/naubull2/sinkgd-pytorch"
"Bug Tracker" = "https://github.com/naubull2/sinkgd-pytorch/issues"

